finished write up

--- a/HW2/HW2Write/HW2solution.tex
+++ b/HW2/HW2Write/HW2solution.tex
@@ -421,5 +421,16 @@ for iterI in range(numIter):
     logLikeIter[iterI] = curLog
 
 \end{lstlisting}
+\newpage
+
+Here is the negative log-likelihood after each iteration (starting from 0):
+
+\begin{figure}[h]
+\centering
+\includegraphics[width=6in]{prob2cPlot2.png}
+\caption{Neg LL after running IPF}
+\end{figure}
+
+It finally converged to a value of $57.91773114$
 
 \end{document}
