final report done

--- a/HW4/Report.tex
+++ b/HW4/Report.tex
@@ -59,7 +59,7 @@
 \centerline{Zachary DeStefano, 15247592}
 \centerline{CS 274B: Spring 2016}
 
-This is the code I used for prediction. 
+This is the code I used. After some trial and error, I settled on a step size of $0.01$ yet my results were still not as expected. 
 
 \section*{Code}
 
